<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="300dp"
        android:background="@drawable/rounded_item_black_row"
        android:layout_marginHorizontal="30dp"
>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gear"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:alpha="0.2"
    />

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="top|center_horizontal"
                android:focusableInTouchMode="true">

            <TextView
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/originalRed"
                    android:text="@string/topic_of_train"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:textAlignment="center"
                    android:id="@+id/topic_edittext_settings"
                    android:textSize="18dp"
                    android:hint="@string/topicHint"
                    android:textStyle="bold"
                    android:textColorHint="#666666"
                    android:textColor="@android:color/white"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textAutoCorrect"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="top|center_horizontal"
                android:focusableInTouchMode="true"
                android:layout_marginTop="70dp">

            <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/originalRed"
                    android:text="@string/timeLimitInSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:textAlignment="center"
                    android:id="@+id/time_limit_edittext_settings"
                    android:textSize="18dp"
                    android:hint="@string/timeHint"
                    android:textColorHint="#666666"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/change_language_layout_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

            <ImageView
                    android:layout_gravity="center_vertical|right"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/worlwide"/>
            <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/originalRed"
                    android:text="@string/changeLanguage"
            />

        </LinearLayout>

        <TextView
                android:layout_marginTop="180dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/save_settings"
                android:textColor="@color/originalRed"
                android:textAlignment="center"
                android:layout_gravity="bottom"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/save"/>

    </FrameLayout>


</FrameLayout>